examples/type_system/failing/207_stage_parse_suppresses_type.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/207_stage_parse_suppresses_type.flx
// error[E071]: Unterminated String
//
// String literal is missing closing quote.
//
//   examples/type_system/failing/207_stage_parse_suppresses_type.flx:51:18
//    |
// 51 |     let broken = "unterminated
//    |                  ^^^^^^^^^^^^^
//
// Hint:
//   Add a closing " at the end of the string.
//
//
// • 1 error • examples/type_system/failing/Stage150Type.flx
// error[E300]: Annotation Type Mismatch
//
// The value of `x` does not match its type annotation.
//
//   examples/type_system/failing/Stage150Type.flx:32:23
//    |
// 32 |         let x: Bool = 42
//    |                       ^^
//    |                       -- this value has type `Int`
//
//    |                ---- but `x` was annotated as `Bool`
//
// Note:
//   annotated type: Bool
//   value type: Int
//
// Help:
//   Booleans are not numeric in Flux. Use `true` or `false` here.
//
// Found 2 errors across 2 modules.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E071
// expect-error: E300

// Multi-module stage filtering fixture.
// Entry has parse errors; imported module has type/effect diagnostics.
// Entry is skipped, but independent imports still compile, so real suppression is exercised.

import Stage150Type

fn main() -> Unit {
    let broken = "unterminated
}
